se ajustan os docs